# scribus-playground-tabulators

./: CMakeLists.txt  README.md
assets/: assets.qrc  dialog.epgz
src/: dialog.cpp  dialog.h  main.cpp  tabulator.cpp  tabulator.h  tabulators.cpp  tabulators.h
ui/: dialog.ui  tabulator.ui
